client/assets/css/index.css
@font-face {
  font-family: AvenirNextPro;
  src: url("../font/AvenirLTStd-Light.woff") format("opentype");
}

/* overriding bootstrap default styles */
#navbar-margin {
  margin-bottom:0;
}

/* prevents unintentional routing in Angular via href tags on empty anchors Bootstrap uses for styling */
.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }

/* default styles */

body {
  color:#5f327;
  font-family: AvenirNextPro, cursive;
}

 ul {
  list-style-type: none;
  text-align: center;
}

li {
  display: inline-block;
}

p {
  margin-bottom: 2px;
}

a, a:hover, a:focus {
  color:#fff;
  text-decoration: none;
}

small {
  font-style: italic;
}

.main-color {
  color:#5f327c;
}

.header img {
  position:absolute;
  top:0;
  left:0;
  z-index:99;
}

.main-container {
  margin-right:20px;
}

.main-container .map-container {
  width:100%;
  /* fixed width must be set for map-canvas */
  height:650px;
}

.main-container #map-canvas {
  height:100%;
  width:100%;
}

.details-container, .results-container {
  height:650px;
  overflow:scroll;
  border:2px solid #5f327c;
}

.results-container {
  padding:0 10px 10px 10px;
  margin-top:10px;
}

.details-container .details-neighborhood-bg {
  background: webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
  width:100%;
  height:100px;
}

.details-container h1 {
  font-size: 72px;
  text-align: center;
  padding-top:10px;
  color:#fff;
}

.details-container h4,
.details-container p,
.details-container h5 {
  display: inline-block;
}

.details-container label {
  margin-left:20px;
}

.details-container .attractions,
.details-container .amenities {
  height:200px;
  overflow:scroll;
  padding-left:0;
}

.details-container .attractions li,
.details-container .amenities li {
  display: block;
  border-right:1px solid #000;
  margin-left:30px;
  text-align: left;
  cursor: pointer;
}

.details-container .icon {
  display: inline-block;
  margin-right:0px;
  width:25px;
  height:25px;
}

.details-container .card-block img {
  display: inline-block;
  width:100px;
  height:100px;
}

.details-container .commute .card-block {
  text-align: right;
}

.details-container .rent-commute-container h5 {
  display: block;
  font-size: 26px;
}

.details-container .rent-commute-container {
  border-bottom:1px solid #5f327c;
  padding-bottom: 10px;
}

.slideshow {
  overflow:hidden;
  height:200px;
  position:relative;
}


.slideshow .profile-buttons {
  display: block;
  position:absolute;
  max-width:50%;
  height:40px;
  padding:5px 15px 0 15px;
  background-color: #5f327c;
  z-index:1;
  font-size: 25px;
  color:#fff;
  text-shadow: 0px -1px 0px rgba(30, 30, 30, 0.8);
    -webkit-box-shadow: 0px 4px 5px rgba(31, 31, 31, 0.50);
    -moz-box-shadow:    0px 4px 5px rgba(31, 31, 31, 0.50);
    box-shadow:         0px 4px 5px rgba(31, 31, 31, 0.50);
}

.slideshow .back-button {
  right:5px;
  top:5px;
}

.slideshow .neighborhood-name {
  top:5px;
}

.instagram-default-background {
  background-image: url("../images/instagram_default.jpg");
  background-size: cover;
  width: 800px;
  height: 200px;
}

.slideshow .picture-container {
  position: relative;
}

.slideshow .instagram-username {
  z-index:1;
  position:absolute;
  bottom:10px;
  left:10px;
  color:white;
}

.nav-container {
  margin-top: 10px;
  text-align: center;
  vertical-align: middle;
  font-size: 20px;
}

.nav-container a {
  color:#fff;
}

.nav-container .nav-button {
  color:#5f327;
}

.nav-container .nav-button {
  background-color: #5f327c;
  text-shadow: 0px -1px 0px rgba(30, 30, 30, 0.8);
    -webkit-box-shadow: 0px 4px 5px rgba(31, 31, 31, 0.50);
    -moz-box-shadow:    0px 4px 5px rgba(31, 31, 31, 0.50);
    box-shadow:         0px 4px 5px rgba(31, 31, 31, 0.50);
  padding-top:5px;
  min-width:100px;
  width:80%;
  max-height:60px;
  max-height:60px;
  margin:0 auto;
}

.thumbnails-container {
  text-align: center;
}

.thumbnails-container h4 {
  font-size: 16px;
}

.searchForm form {
  margin-top:20px;
}

.filterForm .orderBy label {
  margin-top:5px;
}

.filterForm .filter-options-btn {
  margin-bottom:15px;
}

.filterForm .filter-btn {
  margin-top:22px;
}

.footer {
  position:fixed;
  bottom:0;
  height: 25px;
  width: 100%;
  background-color:#f8f8f8;
  border-color: #e7e7e7;
}

